# claude-agents

./: .gitignore  README.md  agent.py
dsa-planner/: .env.example  .gitignore  CLAUDE.md  README.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
dsa-planner/.github/workflows/: ci.yml
dsa-planner/docs/superpowers/plans/: 2026-06-02-dsa-progress-analyzer.md  2026-06-03-notes-agent.md
dsa-planner/docs/superpowers/specs/: 2026-06-03-notes-agent-design.md
dsa-planner/src/: proxy.ts
dsa-planner/src/app/: layout.tsx
dsa-planner/src/app/(dashboard)/: layout.tsx
dsa-planner/src/application/services/: AnalyticsService.ts
dsa-planner/src/application/use-cases/: ConnectLeetCodeProfile.ts  TakeDailySnapshot.ts
dsa-planner/src/components/ui/: form.tsx
dsa-planner/supabase/migrations/: 0001_create_users.sql  0002_create_leetcode_profiles.sql  0003_create_topics.sql  0004_create_snapshots.sql  0005_create_recommendations.sql  0006_create_study_plans.sql  0007_create_ai_interactions.sql  0008_seed_topics.sql  0009_local_auth_users.sql  0010_create_problem_notes.sql
pg-query-agent/: .env.example  README.md  main.py  mcp_server.py  pyproject.toml
pg-query-agent/agents/: query_builder.py  query_executor.py
pg-query-agent/config/: agents.yaml  tasks.yaml
pg-query-agent/context/: store.py
pg-query-agent/tests/: test_agents.py  test_context_store.py
pg-query-agent/tests/tools/: test_guardrail.py  test_query_tool.py  test_schema_tool.py
pg-query-agent/tools/: query_tool.py  schema_tool.py
(+82 files in other folders)
