[project]
name = "pg-query-agent"
version = "0.1.0"
description = "Natural language PostgreSQL queries via Claude Code SDK — no API key needed"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "psycopg2-binary>=2.9",
    "sqlparse>=0.5",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0",
    "mcp>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
reportUnusedParameter = false

[tool.coverage.run]
source = ["agents", "tools"]
omit = ["tests/*"]
